force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__ActivationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActivationDateTime__c</fullName>
    <label>Activation Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActivationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>