force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__AssessmentQuestionVersionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentQuestionVersionStatus__c</fullName>
    <label>Assessment Question Version Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentQuestionVersionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>