force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__DeactivationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeactivationDateTime__c</fullName>
    <label>Deactivation Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeactivationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>