force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__HelpText__c.field-meta.xml
<CustomField>
    <fullName>ssot__HelpText__c</fullName>
    <label>Help Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HelpText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>