force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__IsOptionSourceResponseValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsOptionSourceResponseValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Option Source Response Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsOptionSourceResponseValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>