force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__IsPublished__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPublished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Published</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPublished</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>