force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__QuestionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuestionText__c</fullName>
    <label>Question Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuestionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>