force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__rel_1720291285246_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291285246_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentQuestionVersion_Assessment_rel</label>
    <referenceTo>ssot__AssessmentQuestion__dlm</referenceTo>
    <relationshipLabel>AssessmentQuestionVersion_Assessment_rel</relationshipLabel>
    <relationshipName>rel_1720291285246_end</relationshipName>
    <type>Lookup</type>
</CustomField>