force-app/main/default/objects/ssot__AssessmentQuestionVersion__dlm/fields/ssot__ResponseValuesText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseValuesText__c</fullName>
    <label>Response Values</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseValuesText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>